# liteway

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/src/: example.cpp
lib/: CMakeLists.txt
lib/include/liteway/: color.hpp  error.hpp  instance.hpp  janitor.hpp  pointer.hpp  test.hpp  utils.hpp  utils.inl
lib/include/liteway/wayland/: instance.hpp  window.hpp
lib/src/: instance.cpp  test.cpp
lib/src/wayland/: instance.cpp  window.cpp
